[package]
name = "fixed-exp"
version = "0.1.0"
authors = ["fixed-exp contributors"]
edition = "2018"
readme = "README.md"
description = "Exponentiation for fixed-point numbers"
repository = "https://github.com/toasteater/fixed-exp"
documentation = "https://docs.rs/fixed-exp/"
license = "MIT OR Apache-2.0"
keywords = ["numerics", "mathematics"]

[dependencies]
fixed = "1"
typenum = "1"
num-traits = { version = "0.2", default-features = false, features = ["i128"] }

[dev-dependencies]
criterion = "0.3"
rand = "0.7"

[[bench]]
name = "benchmark"
harness = false
